# aviary-cpacs-mcp

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
src/aviary_cpacs_mcp/: __init__.py  __main__.py  cpacs_adapter.py  main.py  server.py  session_manager.py
src/aviary_cpacs_mcp/aviary/: __init__.py  runner.py
src/aviary_cpacs_mcp/tools/: __init__.py  configure_mission.py  get_trajectory.py  run_mission.py  set_aircraft.py
tests/: test_ovs_cpacs.py
